# AsyncCSVXpert

./: Dockerfile  README.md  docker-compose.yaml
csv-processor-frontend/: Dockerfile  package-lock.json  package.json
csv-processor-frontend/public/: index.html
csv-processor-frontend/src/: App.css  App.js
csv_processor/: .env  Cargo.toml  Dockerfile
csv_processor/src/: app_state.rs  csv_processor.rs  handlers.rs  main.rs  services.rs  tests.rs
