[package]
name = "csv_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
async-stream = "0.3.5"
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
reqwest =  { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = "1.38.0"
url = "2.5.2"
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[[test]]
name = "my_tests"
path = "src/tests.rs"
